@@ -15,6 +15,9 @@
 
   * Fixes for numerous intermittent test failures.
 
+  * math::RandomSeed() now sets the random seed for recent (>=3.930) Armadillo
+    versions.
+
 2014-08-29    mlpack 1.0.10
 
   * Bugfix for NeighborSearch regression which caused very slow allknn/allkfn.
